--- a/LED Wall Android App/res/values/strings.xml
+++ b/LED Wall Android App/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_wall">LED Wall</string>
+    <string name="menu_clearwall">Clear Display</string>
 
 </resources>
