More progress on Android app. It now functions primitively, though it is sorely lacking in features (it cannot do anything except set black pixels you touch to white ones, refresh the display to reflect what the server has, and clear the display) and has plenty of bugs.

--- a/LED Wall Android App/res/values/strings.xml
+++ b/LED Wall Android App/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_wall">LED Wall</string>
     <string name="menu_clearwall">Clear Display</string>
+    <string name="menu_refresh">Refresh</string>
 
 </resources>
